# ros-music-adapters

./: CMakeLists.txt  README.md  package.xml
base/: ROSInPort.cpp  ROSInPort.h  ROSOutPort.cpp  ROSOutPort.h
cmake/modules/: FindMUSICADAPTER.cmake
examples/braitenberg3/launch/: demo.launch
examples/braitenberg3/scripts/: .braitenberg3.music.swo  braitenberg3.music  braitenberg3_pyNEST.py
examples/braitenberg3/sdf/: demo_world.sdf
ros-adapters/: ContROSAdapter.cpp  ContROSAdapter.h  ROSContAdapter.cpp  ROSContAdapter.h
